# parser_combinators

./: .gitignore  CMakeLists.txt
include/pc/: combinators.hpp  parsers.hpp  pc.hpp
src/: parsers.cpp  pc.cpp
test/: CMakeLists.txt  combinators_tests.cpp  parsers_tests.cpp
